fixing bold and letter spacing in FF

--- a/sass/resume.sass
+++ b/sass/resume.sass
@@ -210,7 +210,8 @@ section
 				text-align: left
 		h2
 			margin-top: 7px
-			font-weight: bold
+			font-weight: 500
+			letter-spacing: 1px
 		h3
 			margin-top: -5px
 			font-weight: italic
